datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id               String       @id @default(uuid()) @db.Uuid
  firstName        String
  lastName         String
  username         String       @unique
  email            String       @unique
  password         String
  college          College?     @relation(fields: [collegeId], references: [id], onDelete: Cascade)
  collegeId        String?      @db.Uuid
  createdAt        DateTime     @default(now())
  updatedAt        DateTime     @updatedAt
  mfaSecret        String?
  lastLogin        DateTime?
  students         Student?
  faculty          Faculty?
  threadLikes      ThreadLike[]
  userRole         UserRole?    @relation("UserToUserRole")
  threads          Thread[]
  resetToken       String?
  resetTokenExpiry BigInt?
  activeToken      String?
  createdAssignments Assignment[]  @relation("FacultyAssignments") // assignments created by this user (if faculty)

  @@index([email])
  @@index([collegeId])
}



enum AssignmentStatus {
  OPEN
  PENDING
  COMPLETED
}

enum SubmissionStatus {
  PENDING
  SUBMITTED
  OVERDUE

  ACCEPTED
  REJECTED
  
}


model Student {
  id                       String                    @id @default(uuid()) @db.Uuid
  user                     User                      @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId                   String                    @unique @db.Uuid
  enrollmentNo             String                    @unique
  createdAt                DateTime                  @default(now())
  archivedAt               DateTime?
  submissions              AssignmentSubmission[]
  virtualClassroomStudents VirtualClassroomStudent[]
  classAttendances         ClassAttendance[]
  updatedAt                DateTime                  @updatedAt
}

model Faculty {
  id             String             @id @default(uuid()) @db.Uuid
  user           User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId         String             @unique @db.Uuid
  specialization String?
  classrooms     VirtualClassroom[]
  createdAt      DateTime           @default(now())
  updatedAt      DateTime           @updatedAt
}

model UserRole {
  id           String      @id @default(uuid()) @db.Uuid
  userId       String      @unique @db.Uuid
  role         Role
  college      College?    @relation(fields: [collegeId], references: [id], name: "UserRoleToCollege", onDelete: Cascade)
  collegeId    String?     @db.Uuid
  department   Department? @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  departmentId String?     @db.Uuid
  section      Section?    @relation(fields: [sectionId], references: [id], onDelete: Cascade)
  sectionId    String?     @db.Uuid
  year         Year?       @relation(fields: [yearId], references: [id], onDelete: Cascade)
  yearId       String?     @db.Uuid
  user         User        @relation("UserToUserRole", fields: [userId], references: [id], onDelete: Cascade)
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt
}

enum Role {
  PRINCIPAL
  HOD
  FACULTY
  STUDENT
  CLASS_REPRESENTATIVE
  SUPER_ADMIN
}

model College {
  id          String       @id @default(uuid()) @db.Uuid
  name        String       @unique
  departments Department[]
  users       User[]
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  userRoles   UserRole[]   @relation(name: "UserRoleToCollege")
}

model Department {
  id        String     @id @default(uuid()) @db.Uuid
  name      String
  college   College    @relation(fields: [collegeId], references: [id], onDelete: Cascade)
  collegeId String     @db.Uuid
  years     Year[]
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  UserRole  UserRole[]

  @@index([collegeId])
}

model Year {
  id           String     @id @default(uuid()) @db.Uuid
  name         String
  department   Department @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  departmentId String     @db.Uuid
  sections     Section[]
  userRoles    UserRole[]
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @default(now()) @updatedAt

  @@index([departmentId])
}

model Section {
  id     String @id @default(uuid()) @db.Uuid
  name   String
  year   Year   @relation(fields: [yearId], references: [id], onDelete: Cascade)
  yearId String @db.Uuid

  UserRole         UserRole[]
  createdAt        DateTime           @default(now())
  updatedAt        DateTime           @updatedAt
  VirtualClassroom VirtualClassroom[]

  @@index([yearId])
}

model VirtualClassroom {
  id                       String                    @id @default(uuid()) @db.Uuid
  name                     String
  description              String?
  faculty                  Faculty                   @relation(fields: [facultyId], references: [id], onDelete: Cascade)
  facultyId                String                    @db.Uuid
  section                  Section                   @relation(fields: [sectionId], references: [id], onDelete: Cascade)
  sectionId                String                    @db.Uuid
  units                    Unit[]
  assignments              Assignment[]
  syllabusUrl              String?
  classAttendances         ClassAttendance[]
  virtualClassroomStudents VirtualClassroomStudent[]
  threads                  Thread[]
  createdAt                DateTime                  @default(now())
  updatedAt                DateTime                  @default(now())

  @@index([facultyId])
}

model VirtualClassroomStudent {
  id          String           @id @default(uuid()) @db.Uuid
  classroom   VirtualClassroom @relation(fields: [classroomId], references: [id], onDelete: Cascade)
  classroomId String           @db.Uuid
  student     Student          @relation(fields: [studentId], references: [id], onDelete: Cascade)
  studentId   String           @db.Uuid
  enrolledAt  DateTime         @default(now())
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt

  @@unique([classroomId, studentId])
}

model Unit {
  id                  String               @id @default(uuid()) @db.Uuid
  name                String
  description         String?
  classroom           VirtualClassroom     @relation(fields: [classroomId], references: [id], onDelete: Cascade)
  classroomId         String               @db.Uuid
  educationalContents EducationalContent[]
  createdAt           DateTime             @default(now())
  updatedAt           DateTime             @updatedAt
  threads             Thread[]

  @@index([classroomId])
}

model EducationalContent {
  id        String      @id @default(uuid()) @db.Uuid
  unit      Unit        @relation(fields: [unitId], references: [id], onDelete: Cascade)
  unitId    String      @db.Uuid
  type      ContentType
  content   String
  version   Int         @default(1)
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt

  @@index([unitId])
}

enum ContentType {
  NOTE
  LINK
  VIDEO
  DOCUMENT
}

model ClassAttendance {
  id          String           @id @default(uuid()) @db.Uuid
  student     Student          @relation(fields: [studentId], references: [id], onDelete: Cascade)
  studentId   String           @db.Uuid
  classroom   VirtualClassroom @relation(fields: [classroomId], references: [id], onDelete: Cascade)
  classroomId String           @db.Uuid
  date        DateTime
  present     Boolean
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt

  @@unique([studentId, classroomId, date])
  @@index([studentId, classroomId])
}

model Assignment {
  id                    String                 @id @default(uuid()) @db.Uuid
  title                 String
  description           String?
  content               AssignmentContent
  noteContent           String? // markdown content when `content` is NOTE
  questionFileUrl       String? // file URL when `content` is QUESTION_FILE
  deadline              DateTime
  status                AssignmentStatus       @default(OPEN)
  classroom             VirtualClassroom       @relation(fields: [classroomId], references: [id], onDelete: Cascade)
  classroomId           String                 @db.Uuid
  assignmentSubmissions AssignmentSubmission[]
  createdAt             DateTime               @default(now())
  updatedAt             DateTime               @updatedAt
  faculty               User                   @relation("FacultyAssignments", fields: [facultyId], references: [id])
  facultyId             String                 @db.Uuid

  @@index([classroomId])
}

enum AssignmentContent {
  NOTE
  QUESTION_FILE
}

model AssignmentSubmission {
  id           String     @id @default(uuid()) @db.Uuid
  assignment   Assignment @relation(fields: [assignmentId], references: [id], onDelete: Cascade)
  assignmentId String     @db.Uuid
  student      Student    @relation(fields: [studentId], references: [id], onDelete: Cascade)
  studentId    String     @db.Uuid
  content      String
  submissionFileUrl      String?    // For student-uploaded assignment file
  status       SubmissionStatus @default(PENDING)
  facultyComment String?  
  submittedAt  DateTime   @default(now())
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt

  @@index([assignmentId])
}

model Thread {
  id          String            @id @default(uuid()) @db.Uuid
  title       String?
  content     String
  classroom   VirtualClassroom? @relation(fields: [classroomId], references: [id], onDelete: Cascade)
  classroomId String?           @db.Uuid

  unit             Unit?        @relation(fields: [unitId], references: [id], onDelete: Cascade)
  unitId           String?      @db.Uuid
  parent           Thread?      @relation("ThreadComments", fields: [parentId], references: [id], onDelete: Cascade)
  parentId         String?      @db.Uuid
  replies          Thread[]     @relation("ThreadComments")
  user             User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId           String       @db.Uuid
  likes            ThreadLike[]
  threadStatus     ThreadStatus @default(UNANSWERED)
  acceptedAnswerId String?      @db.Uuid
  createdAt        DateTime     @default(now())
  updatedAt        DateTime     @updatedAt

  @@index([createdAt])
}

model ThreadLike {
  id       String  @id @default(uuid()) @db.Uuid
  thread   Thread  @relation(fields: [threadId], references: [id], onDelete: Cascade)
  threadId String  @db.Uuid
  user     User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId   String  @db.Uuid
  isLiked  Boolean @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([threadId, userId])
}

enum ThreadStatus {
  RESOLVED
  UNANSWERED
  CLOSED
}
